--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
-    <script src="script.js" defer></script>
-
 </head>
 
 <body>
@@ -51,8 +46,9 @@
                             <div class="temperature mb-3">
                                 <span id="tempValue" class="display-1"></span>
                                 <span id="tempUnit" class="display-4 align-top">°C</span>
+                                <button id="toggleUnit" class="btn btn-sm btn-outline-secondary ms-2">Switch to °F</button>
                             </div>
-                            <h3 id="weatherDescription" class="h3 mb-4"></h3>
+                            <h3 id="weatherDescription" class="h3 mb-4 text-capitalize"></h3>
 
                             <!-- Weather Details -->
                             <div class="row weather-details">
@@ -102,7 +98,10 @@
         </div>
     </div>
 
-
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="script.js"></script>
 </body>
 
 </html>
